# ice_mre_invalid_CoerceUnsized

./: Cargo.toml  bacon.toml  readme.md
src/: main.rs
