[package]
name = "ice_mre_invalid_coerce_unsized"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
http = "0.2.12"
opendal = "0.51"
serde = "1.0.217"
serde_json = "1.0.135"
shuttle-runtime = { version = "0.51.0", default-features = false, git = "https://github.com/c-git/shuttle", branch = "ice_investigation" }
shuttle-shared-db = { version = "0.51.0", default-features = false, features = ["postgres", "opendal-postgres"], git = "https://github.com/c-git/shuttle", branch = "ice_investigation" }
tokio = "1.43"
tonic = "0.10.2"
tower = "0.5.2"
