[package]
name = "ice_mre_invalid_coerce_unsized"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
http = "1.2"
opendal = "0.51"
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43", default-features = false, features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tower = "0.5.2"
